@@ -34,6 +34,7 @@ Version 1.4.9 - CVS
   - Translate plugin: prevent PHP notice when viewing empty message.
   - Add CEST and MEST (non-standard) timezone codes for +0200.
   - Add <label> to From field in message list.
+  - Add support for parsing SpamAssassin's X-Spam-Status header (#1589520).
 
 Version 1.4.8 - 11th August 2006
 --------------------------------
